feat: refactored reset code
